<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context="com.reaj.emixer.ui.screens.AddUser">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circleborderbutton"
        android:backgroundTint="@color/light_grey_button"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="Back"
        android:scaleType="centerInside"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/give_a_name_and_icon_to_your_profile"
        android:fontFamily="@font/latolight"
        android:textSize="40sp"
        android:textColor="?android:textColorPrimary"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/name"
        android:textColorHint="?android:textColorSecondary"
        app:boxStrokeColor="?android:textColorSecondary"
        app:hintTextColor="?android:textColorSecondary"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxCornerRadiusTopStart="0dp"
        app:boxCornerRadiusTopEnd="0dp"
        app:boxCornerRadiusBottomStart="0dp"
        app:boxCornerRadiusBottomEnd="0dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="32sp"
            android:textColor="?android:textColorPrimary"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:fontFamily="@font/latolight"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/nameSeparator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:textColorSecondary"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/filledTextField"
        app:layout_constraintEnd_toEndOf="@+id/filledTextField"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField" />

    <androidx.cardview.widget.CardView
        android:id="@+id/iconsCardView"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSeparator"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_icons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:clipToPadding="false"
            android:background="?attr/cardBackgroundColor"
            tools:listitem="@layout/adapter_icons"
            />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconsCardView"
        app:layout_constraintVertical_bias="0.8"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnSaveUser"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/save"
            android:fontFamily="@font/latolight"
            android:textSize="30sp"
            android:textColor="@color/button_text_primary"
            app:cornerRadius="40dp"
            android:backgroundTint="@color/button_background_primary"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginEnd="16dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtndeleteUser"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/delete"
            android:fontFamily="@font/latolight"
            android:textSize="30sp"
            android:textColor="@color/button_text_secondary"
            app:cornerRadius="40dp"
            android:backgroundTint="@color/button_background_secondary"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnCancelUser"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/cancel_button_text"
            android:fontFamily="@font/latolight"
            android:textSize="30sp"
            android:textColor="@color/button_text_secondary"
            app:cornerRadius="40dp"
            android:backgroundTint="@color/button_background_secondary"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
