...
    <string name="no_profiles_message">No profiles found. Add a new profile or import from contacts in Settings.</string>
    <string name="add_profile_button_text_">Add Profile</string>
    <string name="import_contacts_button_text">Import Contacts</string>

    <!--  Add User Screen  -->
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="volume">Volume</string>
    <string name="track">Track</string>


    <!--  Buttons  -->
    <string name="manage_users_button_text">Manage Profiles</string>
...
